--- a/src/Components/ImageContainer/ImageContainer.css
+++ b/src/Components/ImageContainer/ImageContainer.css
@@ -5,23 +5,25 @@
 }
 
 .generatedImage{
-    width: 700px;
-    height: 700px;
-    border: 1px solid blue;
+    /* width: 700px;
+    height: 700px; */
+    border: 1px solid rgb(61, 61, 65);
 }
 
 svg{
     width: 100%;
     height: auto;
-    fill: blue;
+    fill: rgb(61, 61, 65);
 }
 
-.A, .B, .C, .BG{
+.A, .B, .C, .D, .E, .BG{
     display: inline-block;
     width: 100%;
     height: 100%;
     position: absolute;
 }
+
+
 
 .A{
     z-index: 10;
@@ -33,6 +35,15 @@ svg{
 
 .C{
     z-index: 6;
+}
+
+.D{
+    z-index: 4;
+}
+
+.E{
+    z-index: 2;
+
 }
 
 .BG{
@@ -57,3 +68,28 @@ svg{
 .songTitleDisplay h5{
     font-weight: 300;
 }
+
+.image-element-enter{
+    transform: scale(0.8);
+    opacity: 0;
+    transition: 1ms;
+}
+
+.image-element-enter-active{
+    transform: scale(0.8);
+    opacity: 0;
+    transition: 1000ms;
+}
+
+.image-element-exit{
+    transform: scale(0.8);
+    opacity: 1;
+    transition: 1000ms;
+}
+
+.image-element-exit-active{
+    transform: scale(1);
+    opacity: 1;
+    transition: 1000ms;
+}
+
