--- a/src/Components/ImageElement/ImageElement.css
+++ b/src/Components/ImageElement/ImageElement.css
@@ -1,13 +1,15 @@
 .generatedImage{
+    display: flex;
     width: 700px;
     height: 700px;
-    border: 1px solid blue;
+    border: 1px solid rgb(61, 61, 65);
+    overflow: hidden;
 }
 
 svg{
     width: 100%;
     height: auto;
-    fill: blue;
+    fill: rgb(61, 61, 65);
 }
 
 .A, .B, .C, .D, .E, .BG{
@@ -16,43 +18,58 @@ svg{
     height: 100%;
     position: absolute;
 
-    animation: fadeIn 2s 1;
+    /* animation: fadeIn 2s 1; */
 }
 
-@keyframes fadeIn {
-    from {
-      transform: scale(0.5);
-      opacity: 0.3;
-    }
-  
-    to {
-      transform: scale(1);
-      opacity: 1
-    }
+@keyframes move1 {
+    0% {transform: translate(0px, 5px);}
+    25% {transform: translate(0px, 0px);}
+    50% {transform: translate(0px, -5px);}
+    75% {transform: translate(0px, 0px);}
+    100% {transform: translate(0px, 5px);}
+}
+
+@keyframes pulse1 {
+    0% {transform: scale(1.0);}
+    22% {transform: scale(1.02);}
+    50% {transform: scale(1.05);}
+    80% {transform: scale(1.02);}
+    100% {transform: scale(1.00);}
+}
+
+@keyframes spin1 {
+    0% {transform: rotate(0deg);}
+    100% {transform: rotate(360deg);}
 }
 
 .A{
     z-index: 10;
+    animation: pulse1 6s linear infinite;
 }
 
 .B{
     z-index: 8;
+    animation: move1 5s linear infinite;
 }
 
 .C{
     z-index: 6;
+    animation: move1 5.5s linear infinite;
 }
 
 .D{
     z-index: 4;
+    animation: spin1 90s linear infinite;
 }
 
 .E{
     z-index: 2;
+    animation: spin1 120s linear infinite;
 }
 
 .BG{
-    z-index: 0;
+    z-index: 1;
+    animation: spin1 180s linear infinite;
 }
 
 
