--- a/src/Components/SideBar/SideBar.css
+++ b/src/Components/SideBar/SideBar.css
@@ -1,19 +1,69 @@
 .sidebar{
-    display: block;
-    margin: 0px 20px;
+    /* display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around; */
+    position: relative;
+    /* padding: 0px 20px; */
     width: 300px;
-    height: 100%;
-    /* border: 1px solid red; */
+    height: 94vh;
+     /* border: 1px solid red;  */
     font-size: 13px;
 
     font-weight: 300;
+    /* margin-bottom: 5px; */
+}
 
+.sidebar-header{
+    display: block;
+    width: 100%;
+    max-width: 300px;
+    background-image: linear-gradient(to right,#2437AB, #62D2EF);
+    height: auto;
+    max-height: 5rem;
+    padding: 5px 0px;
+    /* margin-bottom: 5px; */
+}
+
+.sidebar-header h1{
+    padding: 10px;
+    padding-bottom: 0px;
+    font-size: 2.5rem;
+}
+
+.sidebar-header p{
+
+    margin: 10px 10px;
+}
+
+
+.sidebar-footer{
+    /* z-index: -3; */
+    display: block;
+    position: relative;
+    width: 100%;
+    height: auto;
+    max-width: 300px;
+    bottom: 0px;
+    left: 0px;
+    padding: 10px 0px;
+    color: #62D2EF;
+    text-align: center;
+    font-size: 0.8rem;
+}
+
+.sidebar-footer a{
+    color: #62D2EF;
+    text-decoration: none;
 }
 
 .resultsList{
-    max-height: 700px;
+    display: block;
+    position: relative;
+    height: auto;
+    max-height: 80%;
     list-style-type: none;
     text-align: left;
+    /* margin-bottom: 30px; */
 
     overflow-y: scroll;
 }
@@ -24,6 +74,7 @@
     align-items: center;
     border: 1px solid black;
     cursor: pointer;
+    background-color: #252433;
 }
 
 .resultsList li:hover{
@@ -75,4 +126,22 @@
   /* Handle on hover */
   ::-webkit-scrollbar-thumb:hover {
     background: #5193d1; 
+  }
+
+  @media only screen and (max-width: 900px) {
+    .sidebar{
+        width: 90%;
+        max-height: 500px;
+        margin: auto;
+        margin-bottom: 20px;
+    }
+
+    .resultsList{
+        height: 70%;
+        max-height: 400px;
+    }
+
+    .sidebar-footer{
+        display: none;
+    }
   }
