--- a/src/Components/ImageElement/ImageElement.css
+++ b/src/Components/ImageElement/ImageElement.css
@@ -1,9 +1,11 @@
 .generatedImage{
     display: flex;
+    margin: auto;
     width: 700px;
     height: 700px;
     border: 1px solid rgb(61, 61, 65);
     overflow: hidden;
+    /* transform: scale(1.1); */
 }
 
 svg{
@@ -17,6 +19,7 @@ svg{
     width: 100%;
     height: 100%;
     position: absolute;
+    margin: auto;
 
     /* animation: fadeIn 2s 1; */
 }
