--- a/src/Components/MainContainer/MainContainer.css
+++ b/src/Components/MainContainer/MainContainer.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-wrap: nowrap;
     justify-content: space-evenly;
+    overflow: hidden;
 }
 
 .mobile-footer{
@@ -18,6 +19,18 @@
 .mobile-footer a{
     color: white;
     text-decoration: none;
+}
+
+.appInfo{
+    width: 500px;
+    display: none;
+    position: absolute;
+    margin: 10px;
+    z-index: 15;
+    background-color: #252a42;
+
+    transition: 2s;
+
 }
 
 @media only screen and (max-width: 900px) {
