code cleanup and comments

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@ maincolor-2: #62D2EF;
 seccolor-1: #FF7A06;
 seccolor-2: #FFE787; */
 
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap');
 
 body{
 	font-family: 'Ubuntu', sans-serif;
