--- a/src/Components/SearchContainer/SearchContainer.css
+++ b/src/Components/SearchContainer/SearchContainer.css
@@ -2,6 +2,13 @@
 
 .searchContainer{
     padding: 10px;
+    display: flex;
+    flex-wrap: nowrap;
+}
+
+.searchContainer form{
+    width: 100%;
+    margin: 2px 0px;
 }
 
 .searchInput{
@@ -22,4 +29,11 @@
 .searchButton:hover{
     background-color: #5193d1;
     cursor: pointer;
+}
+
+@media only screen and (max-width: 1200px){
+    .searchInput{
+        width: 30%;
+        min-width: 140px;
+    }
 }
