--- a/src/Components/SideBar/SideBar.css
+++ b/src/Components/SideBar/SideBar.css
@@ -1,16 +1,9 @@
 .sidebar{
-    /* display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around; */
     position: relative;
-    /* padding: 0px 20px; */
     width: 360px;
     height: 94vh;
-     /* border: 1px solid red;  */
     font-size: 13px;
-
     font-weight: 300;
-    /* margin-bottom: 5px; */
 }
 
 .sidebar-header{
@@ -20,7 +13,8 @@
     background-image: linear-gradient(to right,#2437AB, #62D2EF);
     height: auto;
     max-height: 5rem;
-    padding: 5px 0px;
+    padding-top: 5px;
+    padding-bottom: 15px;
     /* margin-bottom: 5px; */
 }
 
@@ -31,7 +25,7 @@
 }
 
 .sidebar-header p{
-
+    display: inline-flex;
     margin: 10px 10px;
 }
 
@@ -48,6 +42,7 @@
     left: 0px;
     padding: 10px 0px;
     color: #62D2EF;
+    background-color: #252433;
     text-align: center;
     font-size: 0.8rem;
     
@@ -136,12 +131,22 @@ span{
     background: #5193d1; 
   }
 
-  @media only screen and (max-width: 900px) {
+  @media only screen and (max-width: 1200px) {
+    .sidebar-metacontainer{
+        width: 100%;
+    }
+
     .sidebar{
         width: 90%;
+        max-width: 100%;
         max-height: 500px;
         margin: auto;
         margin-bottom: 20px;
+    }
+
+    .sidebar-header{
+        width: 100%;
+        max-width: 100%;
     }
 
     .resultsList{
