--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,15 @@ maincolor-2: #62D2EF;
 seccolor-1: #FF7A06;
 seccolor-2: #FFE787; */
 
+$color-dark1: #1E1E2C;
+$color-dark2: #252333;
+$color-dark3: #2B2637;
+$color-dark4: #343044;
+$color-dark5: #5B5768;
+
+$color-light1: #FFE395;
+$color-light2: #D6AF6B;
+
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap");
 
@@ -12,32 +21,71 @@ body {
   font-weight: 300;
 
   color: white;
-  background-color: #252433;
+  background-color: $color-dark1;
+
+  ::selection{
+    background-color: $color-light2;
+  }
 }
 
 //MAIN CONTAINER
 .main {
   display: flex;
+  margin: auto;
   flex-wrap: nowrap;
-  justify-content: space-evenly;
+  justify-content: center;
   overflow: hidden;
+  // width: 90%;
+  height: 90%;
+  // border: 1px solid lightblue;
+}
+
+.main2{
+  display: inline-block;
+  width: auto;
+  height: auto;
+  // margin: 2% auto;
+  // padding: 0px 300px;
+  // text-align: center;
+  // align-content: center;
+  // justify-content: center;
+  // border: 1px solid peru;
+}
+
+.footer{
+  width: 100%;
+  
+  bottom: 0px;
+  // padding: 10px 0px;
+  color: white;
+  text-align: center;
+  margin: 5px 0px;
+  margin-top: 0px;
+  transition: 1s;
+
+  a{
+    color: $color-light2;
+    text-decoration: none;
+  }
 }
 
 .mobile-footer {
-  display: none;
+  display: block;
   width: 100%;
   height: 3vh;
 
   bottom: 0px;
-  padding: 10px 0px;
+  margin: 5px 0px;
+  margin-top: 35px;
   color: white;
   text-align: center;
+
+  a{
+    color: $color-light2;
+    text-decoration: none;
+  }
 }
 
-.mobile-footer a {
-  color: white;
-  text-decoration: none;
-}
 
 .appInfo {
   width: 500px;
@@ -53,181 +101,221 @@ body {
 
 // SIDEBAR
 
+.sidebar-header {
+  display: block;
+  width: 100%;
+  // height: 2rem;
+  max-width: 360px;
+  // background-image: linear-gradient(to right, #2437ab, #62d2ef);
+  height: auto;
+  // max-height: 5rem;
+  padding-top: 5px;
+
+  .MuiButtonBase-root{
+    display: inline-block;
+    position: relative;
+    top: -15px;
+    color: $color-dark5;
+    margin: 0px;
+    padding: 0px;
+  }
+
+  .header-title {
+    display: inline-block;
+
+    padding: 10px;
+    padding-bottom: 5px;
+
+    h1{
+      text-transform: uppercase;
+      font-weight: lighter;
+      font-size: 2.7rem;
+      line-height: 2rem;
+      letter-spacing: 2px;
+      color: $color-light1;
+      display: inline;
+      font-weight: lighter;
+      cursor: default;
+
+
+      &:hover{
+        color: white;
+
+      }
+      transition: 0.2s;
+    }
+
+    p {
+      font-size: 0.9rem;
+      // display: inline-flex;
+      margin: 5px 0px;
+      margin-bottom: 0px;
+      
+    
+    }
+  }
+}
+
+.sidebar-plus-image{
+  display: flex;
+  width: auto;
+  justify-content: center;
+  // align-content: center;
+  // border:1px solid red;
+
+}
+
 .sidebar {
+  font-family: "Quicksand", sans-serif;
   position: relative;
   width: 360px;
   height: 94vh;
   font-size: 13px;
   font-weight: 300;
+
+// SEARCH CONTAINER
+
+  .searchContainer {
+    font-family: "Quicksand", sans-serif;
+    padding: 10px;
+    padding-top: 0px;
+    width: auto;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+    // border: 1px solid lightcoral;
+  }
+
+  form {
+    display: flex;
+
+    width: 100%;
+    margin: 2px 0px;
+  }
+
+  .searchInput {
+    font-family: "Quicksand", sans-serif;
+    background: $color-light2;
+    font-weight: bold;
+    width: 200px;
+    border: none;
+    padding: 5px 10px;
+    border-radius: 10px;
+  }
+
+  .searchButton {
+    color: $color-light2;
+    font-family: "Quicksand", sans-serif;
+    font-weight: bold;
+    border: none;
+    border-radius: 10px;
+    padding: 5px 20px;
+    margin: 0px 5px;
+    background-color: $color-dark5;
+  }
+
+  .searchButton:hover {
+    background-color: #574744;
+    cursor: pointer;
+  }
+
+  .resultsList {
+    display: block;
+    position: relative;
+    height: auto;
+    height: 90%;
+    max-height: 98%;
+    list-style-type: none;
+    text-align: left;
+    padding: 10px;
+    border-radius: 5px;
+    /* margin-bottom: 30px; */
+    background-color: $color-dark4;
+  
+    overflow-y: scroll;
+  }
+  
+  .resultsList li {
+    display: flex;
+    padding: 3px;
+    align-items: center;
+    // border: 1px solid black;
+    cursor: pointer;
+    margin: 3px;
+    border-radius: 10px;
+    background-color: $color-dark3;
+  }
+  
+  .resultsList li:hover {
+    background-color: #36293b;
+  }
+  
+  .resultsList li h3 {
+    font-weight: 400;
+    font-size: 16px;
+    padding: 2px 2px;
+  }
+  
+  .resultsList li h5 {
+    font-weight: 300;
+    /* font-size: 1.5rem; */
+    padding: 2px 2px;
+    color: #ffe787;
+  }
+  
+  .searchResultImage {
+    display: inline-block;
+    padding: 5px;
+    height: 50px;
+    width: auto;
+      
+      img {
+          width: 50px;
+          height: auto;
+      }
+  }
 }
 
-.sidebar-header {
-  display: block;
-  width: 100%;
-  max-width: 360px;
-  background-image: linear-gradient(to right, #2437ab, #62d2ef);
-  height: auto;
-  max-height: 5rem;
-  padding-top: 5px;
-  padding-bottom: 15px;
-  /* margin-bottom: 5px; */
-}
 
-.sidebar-header h1 {
-  padding: 10px;
-  padding-bottom: 0px;
-  font-size: 2.5rem;
-}
-
-.sidebar-header p {
-  display: inline-flex;
-  margin: 10px 10px;
-}
-
-.sidebar-footer {
-  /* z-index: -3; */
-  display: block;
-  position: relative;
-  margin: auto;
-  width: 100%;
-  height: auto;
-  max-width: 300px;
-  bottom: 0px;
-  left: 0px;
-  padding: 10px 0px;
-  color: #62d2ef;
-  background-color: #252433;
-  text-align: center;
-  font-size: 0.8rem;
-}
-
-.sidebar-footer a {
-  color: #62d2ef;
-  text-decoration: none;
-}
-
-.resultsList {
-  display: block;
-  position: relative;
-  height: auto;
-  max-height: 80%;
-  list-style-type: none;
-  text-align: left;
-  /* margin-bottom: 30px; */
-
-  overflow-y: scroll;
-}
-
-.resultsList li {
-  display: flex;
-  padding: 3px;
-  align-items: center;
-  border: 1px solid black;
-  cursor: pointer;
-  background-color: #252433;
-}
-
-.resultsList li:hover {
-  background-color: #252a42;
-}
-
-.resultsList li h3 {
-  font-weight: 400;
-  font-size: 16px;
-  padding: 2px 2px;
-}
-
-.resultsList li h5 {
-  font-weight: 300;
-  /* font-size: 1.5rem; */
-  padding: 2px 2px;
-  color: #ffe787;
-}
-
-.searchResultImage {
-  display: inline-block;
-  padding: 5px;
-  height: 50px;
-  width: auto;
-    
-    img {
-        width: 50px;
-        height: auto;
-    }
-}
 
 span {
   margin: 5px;
 }
 
-/* width */
+// /* width */
 ::-webkit-scrollbar {
-  width: 15px;
+  display: none;
+//   width: 15px;
 }
 
-/* Track */
+// /* Track */
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px grey;
-  border-radius: 10px;
+  // display: none;
+//   box-shadow: inset 0 0 5px grey;
+//   border-radius: 10px;
 }
 
-/* Handle */
+// /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #62d2ef;
-  border-radius: 10px;
+//   background: #62d2ef;
+//   border-radius: 10px;
 }
 
-/* Handle on hover */
+// /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #5193d1;
+//   background: #5193d1;
 }
 
 
 
-// SEARCH CONTAINER
 
-.searchContainer {
-  padding: 10px;
-  display: flex;
-  flex-wrap: nowrap;
-}
-
-.searchContainer form {
-  width: 100%;
-  margin: 2px 0px;
-}
-
-.searchInput {
-  border: none;
-  padding: 5px 10px;
-  border-radius: 10px;
-}
-
-.searchButton {
-  border: none;
-  border-radius: 10px;
-  padding: 5px 20px;
-  margin: 0px 5px;
-  background-color: #62d2ef;
-}
-
-.searchButton:hover {
-  background-color: #5193d1;
-  cursor: pointer;
-}
-
-@media only screen and (max-width: 1200px) {
-  .searchInput {
-    width: 30%;
-    min-width: 140px;
-  }
-}
 
 // IMAGE CONTAINER
 
 .imageContainer {
+  // border: 1px solid greenyellow;
   position: relative;
-  margin: auto;
+  margin: auto 0;
   transition: 1s;
   /* overflow: hidden; */
 }
@@ -436,4 +524,86 @@ svg {
 .BG {
   z-index: 1;
   animation: spin1 180s linear infinite;
+}
+
+@media only screen and (max-width: 512px){
+  .imageContainer{
+    align-self: center;
+    transform: scale(0.7);
+    margin: -90px 0;
+  }
+}
+
+@media only screen and (min-width: 512px) and (max-width: 768px){
+  .imageContainer{
+    align-self: center;
+    transform: scale(0.9);
+    margin: -10px 0;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1024px){
+  .imageContainer{
+    align-self: center;
+    transform: scale(1);
+    margin: 10px auto;
+  }
+}
+
+@media only screen and (max-width: 1024px){
+  .main {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    margin: auto;
+    justify-content: center;
+    overflow: hidden;
+    
+    // width: 90%;
+    height: 90%;
+    // border: 1px solid lightblue;
+  }
+
+  .main2{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: center;
+  }
+  
+  .sidebar-header {
+    position: relative;
+    left: 5%;
+    align-self: center;
+  }
+
+  .sidebar {
+    width: 90%;
+    height: 30vh;
+    margin: auto;
+    margin-bottom: 10px;
+    // align-self: center;
+    font-size: 13px;
+    font-weight: 300;
+
+    form{
+      justify-content: center;
+      .searchInput{
+        width: 70%;
+      }
+    }
+  }
+}
+
+@media only screen and (min-width: 1024px){
+
+  .sidebar{
+    height: 710*1.1px;
+    
+  }
+
+  .imageContainer{
+    transform: scale(1.1);
+    margin: 50px 50px;
+  }
 }
